// Artisan Shop — Prisma Schema
// Entities derived from the UML Class Diagram

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "rhel-openssl-3.0.x"]
}

datasource db {
  provider     = "postgresql"
  url          = env("DATABASE_URL")
  directUrl    = env("DIRECT_URL")
  relationMode = "prisma"
}

model User {
  id           Int     @id @default(autoincrement())
  name         String
  email        String  @unique
  passwordHash String
  phone        String?
  address      String?
  province     String?
  role         String  @default("customer") // "customer" | "admin"

  orders Order[]

}

model Category {
  id       Int       @id @default(autoincrement())
  name     String    @unique
  isActive Boolean   @default(true)

  products Product[]

}

model Product {
  id                 Int            @id @default(autoincrement())
  name               String
  description        String?
  price              Float
  stock              Int            @default(0)
  status             String         @default("active") // "active" | "inactive"
  allowsCustomization Boolean       @default(false)
  categoryId         Int

  category     Category       @relation(fields: [categoryId], references: [id])
  photos       ProductPhoto[]
  orderDetails OrderDetail[]

}

model ProductPhoto {
  id        Int     @id @default(autoincrement())
  productId Int
  url       String
  order     Int     @default(0)

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

}

model Order {
  id              Int      @id @default(autoincrement())
  referenceNumber String   @unique
  userId          Int?
  contactName     String
  email           String
  phone           String
  address         String
  province        String
  shippingCost    Float    @default(0)
  total           Float
  status          String   @default("pending") // "pending" | "processing" | "shipped" | "delivered" | "cancelled"
  isCustomized    Boolean  @default(false)
  createdAt       DateTime @default(now())

  user         User?              @relation(fields: [userId], references: [id])
  details      OrderDetail[]
  statusHistory OrderStatusHistory[]

}

model OrderDetail {
  id                   Int     @id @default(autoincrement())
  orderId              Int
  productId            Int
  quantity             Int
  unitPrice            Float
  customizationDetails String?

  order   Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id])

}

model OrderStatusHistory {
  id      Int      @id @default(autoincrement())
  orderId Int
  status  String
  date    DateTime @default(now())

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)

}

model ShippingConfig {
  id                  Int    @id @default(autoincrement())
  baseProvince        String
  destinationProvince String
  additionalCost      Float

  @@unique([baseProvince, destinationProvince])
}
